--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -2,7 +2,8 @@
 
 
 .navbar_div{
-    width: 100%; 
+    width: 100%;
+    margin-bottom: 30px;
 }
 nav{
   position: fixed;
@@ -39,7 +40,7 @@ nav .wrapper{
   color: #f2f2f2;
   text-decoration: none;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
   padding: 9px 15px;
   border-radius: 5px;
   transition: all 0.3s ease;
@@ -76,11 +77,7 @@ nav .wrapper{
 }
 
 
-.content .row img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+
 .content .row header{
   color: #f2f2f2;
   font-size: 20px;
